Port MongoDB::BSON code to this repository
This is a minimal port of the BSON code (including C and XS) from
the MongoDB distribution.

Changes:

* Now uses DAGOLDEN's standard Dist::Zilla bundle, except swaps in
  the MakeMaker::Awesome plugin for Makefile.PL generation
* Rewrote Makefile.PL generation to use ExtUtils::MakeMaker directly
  rather than Module::Install.  This allows Makefile.PL to be automatically
  generated by Dist::Zilla.  See dist.ini files in inc/ for specifics.
* Changed "MongoDB::BSON" to "BSON::XS" in code and tests

Things not yet changed:

* Documentation
* Tests and code still expect MongoDB::* BSON classes, so this library
  currently still depends on the MongoDB distribution

However, the code compiles and passes tests, which is the first step.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.tmp
 *.rej
 *.orig
+*.o
+*.bs
 *~
 /Build
 /Build.bat
@@ -19,3 +21,5 @@
 /MYMETA.json
 .errors.err
 errors.err
+xs/*.c
+/config.log
