--- a/dist.ini
+++ b/dist.ini
@@ -3,11 +3,6 @@ author      = David Golden <david@mongodb.com>
 license     = Apache_2_0
 copyright_holder = MongoDB, Inc.
 
-; true for non-indexed -TRIAL development releases, false for stable releases
-; leave true until ready for a stable release, then set false, release and
-; reset to true
-is_trial = 1
-
 [@DAGOLDEN]
 :version = 0.072
 authority = cpan:MONGODB
@@ -15,6 +10,12 @@ github_issues = 0
 Bugtracker.web = https://jira.mongodb.org/browse/PERL
 UploadToCPAN.pause_cfg_file = .pause-mongodb
 -remove = MakeMaker
+Test::ReportPrereqs.include[0] = JSON::PP
+Test::ReportPrereqs.include[1] = JSON::XS
+Test::ReportPrereqs.include[2] = CPanel::JSON::XS
+
+[ReleaseStatus::FromVersion]
+testing = second_element_odd
 
 ; authordep Dist::Zilla::Plugin::MakeMaker::Awesome  = 0.35
 [=inc::MakeMaker]
