--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,9 @@ Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = JSON::XS
 Test::ReportPrereqs.include[2] = CPanel::JSON::XS
 
+[Prereqs]
+BSON = 1.000000
+
 [ReleaseStatus::FromVersion]
 testing = second_element_odd
 
