Pass Decimal128 mapping tests

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,21 @@ BSON = 1.000000
 [ReleaseStatus::FromVersion]
 testing = second_element_odd
 
+[RemovePrereqs]
+remove = DateTime
+remove = DateTime::Tiny
+remove = Mango::BSON::Time
+remove = Math::Int64
+remove = MongoDB
+remove = MongoDB::BSON::Binary
+remove = MongoDB::BSON::Regexp
+remove = MongoDB::BSON::_EncodedDoc
+remove = MongoDB::Code
+remove = MongoDB::DBRef
+remove = MongoDB::OID
+remove = MongoDB::Timestamp
+remove = Time::Moment
+
 ; authordep Dist::Zilla::Plugin::MakeMaker::Awesome  = 0.35
 [=inc::MakeMaker]
 default_jobs = 9
