Add configuratin prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,11 @@ Test::ReportPrereqs.include[2] = CPanel::JSON::XS
 [Prereqs]
 BSON = 1.002001
 
+; Add pre-configuration requirements to META so that Makefile.PL will run
+[Prereqs / ConfigureRequires]
+Config::AutoConf = 0.22
+Path::Tiny = 0.052
+
 [ReleaseStatus::FromVersion]
 testing = second_element_odd
 
