--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ UploadToCPAN.pause_cfg_file = .pause-mongodb
 Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = JSON::XS
 Test::ReportPrereqs.include[2] = CPanel::JSON::XS
+CheckPrereqsIndexed.skips[0] = ^inc::
 
 [Prereqs]
 BSON = 1.002001
