minor: bumping prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -14,9 +14,10 @@ Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = JSON::XS
 Test::ReportPrereqs.include[2] = CPanel::JSON::XS
 CheckPrereqsIndexed.skips[0] = ^inc::
+Test::MinimumVersion.max_target_perl = 5.010001
 
 [Prereqs]
-BSON = 1.002001
+BSON = 1.006001
 
 ; Add pre-configuration requirements to META so that Makefile.PL will run
 [Prereqs / ConfigureRequires]
