Prepare EOL release

--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,8 @@ copyright_holder = MongoDB, Inc.
 [@DAGOLDEN]
 :version = 0.072
 authority = cpan:MONGODB
-github_issues = 0
-Bugtracker.web = https://jira.mongodb.org/browse/PERL
+github_issues = 1
+no_bugtracker = 1
 UploadToCPAN.pause_cfg_file = .pause-mongodb
 -remove = MakeMaker
 Test::ReportPrereqs.include[0] = JSON::PP
